# context-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  cliff.toml  cog.toml  lefthook.yml
.claude/: settings.json
.claude/agents/: ariel-xml5-anbima.md  code-reviewer.md  rails-expert.md
.claude/hooks/ralph-loop/: setup-ralph-loop.sh  stop-hook.sh
.claude/rules/core/: core.md
.claude/skills/: hooks.json
.claude/skills/acceptance-testing/: SKILL.md
.claude/skills/backend-unit-integration-e2e-testing/: SKILL.md
.claude/skills/brainstorming/: SKILL.md
.claude/skills/cancel-ralph/: SKILL.md
.claude/skills/codebase-onboarding/: SKILL.md
.claude/skills/debug-mode-logging/: SKILL.md
.claude/skills/decision-debate/: SKILL.md
.claude/skills/docs-init/: SKILL.md
.claude/skills/engineering-ticket/: SKILL.md
.claude/skills/fix/: SKILL.md
.claude/skills/get-issue/: SKILL.md
.claude/skills/harness-audit/: SKILL.md
.claude/skills/investigate-file-changes/: SKILL.md
.claude/skills/ivt-openapi-spec/: SKILL.md
.claude/skills/jcmd-profiling/: SKILL.md
.claude/skills/learn/: SKILL.md
.claude/skills/make-component/: SKILL.md
.claude/skills/no-edit/: SKILL.md
.claude/skills/prompt-optimize/: SKILL.md
.claude/skills/ralph-loop/: SKILL.md
.claude/skills/read-xml4-anbima/: SKILL.md  reference.md
.claude/skills/read-xml5-anbima/: SKILL.md  reference.md
.claude/skills/requirements/: SKILL.md
.claude/skills/research/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/ship/: SKILL.md
.claude/skills/skill-authoring-guide/: SKILL.md
.claude/skills/skill-extract/: SKILL.md
.claude/skills/speckit/: INDEX.md  README.md
.claude/skills/tela-k-reconcile/: SKILL.md
.claude/skills/update-changelog/: SKILL.md
.claude/skills/update-jira-tokens-estimado-realizado/: SKILL.md
.claude/skills/using-git-worktrees/: SKILL.md
.claude/skills/verify/: SKILL.md
.claude/skills/vitest-e2e-playwright-coverage/: SKILL.md
.github/workflows/: ci.yml  commitlint.yml  deploy-site.yml  publish-crates.yml  release.yml
docs/: INDEX.md  RELEASING.md  arquitetura.md  especificacao-rag.md  patterns.md  produto.md  v0.2-roadmap.md
docs/api/: README.md
docs/architecture/: README.md  design-decisions.md  extending.md  modules.md  pipelines.md  summary.md
docs/competitors/: README.md  codegraph.md  context-mode.md  qmd.md  rtk.md
docs/exec/: configuration.md  filtering-pipeline.md  metrics.md  overview.md
docs/graph/: README.md
docs/guides/: README.md  agent-integration.md  cli-reference.md  quick-start.md  roadmap.md  troubleshooting.md  vision.md
docs/map/: README.md  examples.md  how-it-works.md  ranking-algorithm.md
docs/research/: README.md  code-search-state-of-art.md  implementation-decisions.md
docs/search/: README.md  embeddings.md  examples.md  implementation.md  indexing.md  overview.md  reranking.md
llms/: ctx-tool.md
llms/hooks/: ctx-rewrite.sh
llms/rules/: context-engine.md
scripts/: install-claude.sh
site/: .npmrc  astro.config.mjs  bunfig.toml
site/src/styles/: custom.css
src/: cache.rs  claude.md  init.rs  lib.rs  main.rs  output.rs  scanner.rs  tokenizer.rs
src/catalog/: claude.md  indexer.rs  mod.rs  reranker.rs  searcher.rs  types.rs
src/exec/: claude.md  metrics.rs  mod.rs  pipeline.rs  registry.rs  types.rs
src/exec/filters/: aws.rs  cargo.rs  data.rs  docker.rs  gh.rs  git.rs  jvm.rs  kubectl.rs  mod.rs  nav.rs  node.rs  python.rs
src/extractors/: groovy.rs  mod.rs  python.rs  ruby.rs  typescript.rs
src/integrations/: mod.rs
src/integrations/agents/: claude_code.rs  claude_desktop.rs  hook_handlers.rs  mod.rs  (+1 more)
src/pipelines/: mod.rs
src/ranking/: bm25.rs  budget.rs  claude.md  diagnostics.rs  mod.rs  pagerank.rs
src/shared/: config.rs  mod.rs
testdata/: sample.py  sample.rb  sample.ts
tests/: agent_install.rs  exec_proxy.rs  filter_snapshots.rs  integration.rs
tests/fixtures/: cargo_test_all_pass.txt  cargo_test_with_failure.txt  git_diff_whitespace.txt  git_log.txt  git_log_with_merges.txt  git_status_dirty.txt  gradle_test_failure.txt  mvn_test_failure.txt  npm_install_error.txt
(+114 files in other folders)
