[package]
name = "context-engine"
version = "0.1.0"
edition = "2021"
default-run = "ctx"
description = "All-in-one Rust toolkit for Claude Code & MCP agents: auto-rewrite hooks, MCP server, repo maps with BM25+PageRank, call graphs in 7 languages, local RAG search. Single binary, 100% local."
authors = ["Jaime Junior <jaimeodairbassojuniorjaime@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JaimeJunr/context-engine"
homepage = "https://github.com/JaimeJunr/context-engine"
documentation = "https://github.com/JaimeJunr/context-engine/tree/main/docs"
keywords = ["mcp", "claude-code", "llm", "agents", "code-search"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[[bin]]
name = "ctx"
path = "src/main.rs"

[lib]
name = "context_engine"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
tree-sitter = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-java = "0.23"
streaming-iterator = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
ignore = "0.4"
sha2 = "0.10"
regex = "1.10"
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
hex = "0.4"
tree-sitter-language = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
shell-words = "1.1"
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
schemars = "1.0"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3"
serial_test = "3"

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Profile usado pelo cargo-dist nos artefatos de release.
[profile.dist]
inherits = "release"
lto = "thin"

# Configuração do cargo-dist (https://opensource.axo.dev/cargo-dist/).
# Gera binários cross-platform e instaladores curl/powershell em GitHub Releases.
[workspace.metadata.dist]
cargo-dist-version = "0.28.0"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
# Profile de release usado.
dist-profile = "dist"
